[gd_scene load_steps=55 format=3 uid="uid://dftml3fde7laa"]

[ext_resource type="Script" path="res://scripts/character.gd" id="1_lwf4d"]
[ext_resource type="Texture2D" uid="uid://bg00eo843g4to" path="res://assets/character/Bot Wheel/damaged.png" id="1_lxakc"]
[ext_resource type="Texture2D" uid="uid://dmsp5l7ry73e8" path="res://assets/character/Bot Wheel/GAS dash FX.png" id="3_leiqd"]
[ext_resource type="Texture2D" uid="uid://cbok82ggerenw" path="res://assets/character/Bot Wheel/death.png" id="3_vl534"]
[ext_resource type="Texture2D" uid="uid://cc34ufvhs6yuh" path="res://assets/character/Bot Wheel/static idle.png" id="4_nyip8"]
[ext_resource type="Texture2D" uid="uid://b327fhgpvnt1e" path="res://assets/character/Bot Wheel/shoot without FX.png" id="6_j77mo"]
[ext_resource type="Texture2D" uid="uid://dg7icngk70lbi" path="res://assets/character/Bot Wheel/move without FX.png" id="6_xmako"]
[ext_resource type="Texture2D" uid="uid://1j10inrg3l7g" path="res://assets/character/Bot Wheel/move FX.png" id="8_c5nia"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_0bn5y"]

[sub_resource type="AtlasTexture" id="AtlasTexture_ewmet"]
atlas = ExtResource("1_lxakc")
region = Rect2(11, 0, 26, 26)

[sub_resource type="AtlasTexture" id="AtlasTexture_p43g1"]
atlas = ExtResource("1_lxakc")
region = Rect2(11, 26, 26, 26)

[sub_resource type="AtlasTexture" id="AtlasTexture_gevpr"]
atlas = ExtResource("3_leiqd")
region = Rect2(0, 0, 117, 26)

[sub_resource type="AtlasTexture" id="AtlasTexture_t56o4"]
atlas = ExtResource("3_leiqd")
region = Rect2(0, 26, 117, 26)

[sub_resource type="AtlasTexture" id="AtlasTexture_6smir"]
atlas = ExtResource("3_leiqd")
region = Rect2(0, 52, 117, 26)

[sub_resource type="AtlasTexture" id="AtlasTexture_a46jv"]
atlas = ExtResource("3_leiqd")
region = Rect2(0, 78, 117, 26)

[sub_resource type="AtlasTexture" id="AtlasTexture_oad7d"]
atlas = ExtResource("3_leiqd")
region = Rect2(0, 104, 117, 26)

[sub_resource type="AtlasTexture" id="AtlasTexture_m3ohm"]
atlas = ExtResource("3_leiqd")
region = Rect2(0, 130, 117, 26)

[sub_resource type="AtlasTexture" id="AtlasTexture_x75jk"]
atlas = ExtResource("3_vl534")
region = Rect2(1, 0, 38, 26)

[sub_resource type="AtlasTexture" id="AtlasTexture_y0vis"]
atlas = ExtResource("3_vl534")
region = Rect2(1, 26, 38, 26)

[sub_resource type="AtlasTexture" id="AtlasTexture_d60b3"]
atlas = ExtResource("3_vl534")
region = Rect2(1, 52, 38, 26)

[sub_resource type="AtlasTexture" id="AtlasTexture_48p2r"]
atlas = ExtResource("3_vl534")
region = Rect2(1, 78, 38, 26)

[sub_resource type="AtlasTexture" id="AtlasTexture_7j2yt"]
atlas = ExtResource("3_vl534")
region = Rect2(1, 104, 38, 26)

[sub_resource type="AtlasTexture" id="AtlasTexture_yhknw"]
atlas = ExtResource("3_vl534")
region = Rect2(1, 130, 38, 26)

[sub_resource type="AtlasTexture" id="AtlasTexture_vk7fk"]
atlas = ExtResource("4_nyip8")
region = Rect2(12, 0, 21, 26)

[sub_resource type="AtlasTexture" id="AtlasTexture_8wlrj"]
atlas = ExtResource("6_xmako")
region = Rect2(12, 0, 26, 26)

[sub_resource type="AtlasTexture" id="AtlasTexture_vy7rw"]
atlas = ExtResource("6_xmako")
region = Rect2(12, 26, 26, 26)

[sub_resource type="AtlasTexture" id="AtlasTexture_ykswx"]
atlas = ExtResource("6_xmako")
region = Rect2(12, 52, 26, 26)

[sub_resource type="AtlasTexture" id="AtlasTexture_m8lkk"]
atlas = ExtResource("6_xmako")
region = Rect2(12, 78, 26, 26)

[sub_resource type="AtlasTexture" id="AtlasTexture_8l6qr"]
atlas = ExtResource("6_xmako")
region = Rect2(12, 104, 26, 26)

[sub_resource type="AtlasTexture" id="AtlasTexture_btxyb"]
atlas = ExtResource("6_xmako")
region = Rect2(12, 130, 26, 26)

[sub_resource type="AtlasTexture" id="AtlasTexture_wg26h"]
atlas = ExtResource("6_xmako")
region = Rect2(12, 156, 26, 26)

[sub_resource type="AtlasTexture" id="AtlasTexture_qe2x2"]
atlas = ExtResource("6_xmako")
region = Rect2(12, 182, 26, 26)

[sub_resource type="AtlasTexture" id="AtlasTexture_3c0jr"]
atlas = ExtResource("6_j77mo")
region = Rect2(14, 0, 20, 26)

[sub_resource type="AtlasTexture" id="AtlasTexture_7pu4u"]
atlas = ExtResource("6_j77mo")
region = Rect2(14, 26, 20, 26)

[sub_resource type="AtlasTexture" id="AtlasTexture_7oljf"]
atlas = ExtResource("6_j77mo")
region = Rect2(14, 52, 20, 26)

[sub_resource type="AtlasTexture" id="AtlasTexture_k0k3b"]
atlas = ExtResource("6_j77mo")
region = Rect2(14, 78, 20, 26)

[sub_resource type="SpriteFrames" id="SpriteFrames_mli6f"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ewmet")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_p43g1")
}],
"loop": false,
"name": &"damage",
"speed": 2.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_gevpr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_t56o4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6smir")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a46jv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_oad7d")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_m3ohm")
}],
"loop": false,
"name": &"dash",
"speed": 6.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_x75jk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_y0vis")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_d60b3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_48p2r")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7j2yt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yhknw")
}],
"loop": true,
"name": &"death",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_vk7fk")
}],
"loop": false,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_8wlrj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vy7rw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ykswx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_m8lkk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8l6qr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_btxyb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wg26h")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qe2x2")
}],
"loop": false,
"name": &"move",
"speed": 7.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_3c0jr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7pu4u")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7oljf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_k0k3b")
}],
"loop": false,
"name": &"shoot",
"speed": 4.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_wpluh"]
atlas = ExtResource("8_c5nia")
region = Rect2(8, 183, 15, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_8p4pa"]
atlas = ExtResource("8_c5nia")
region = Rect2(8, 159, 15, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_ji6i6"]
atlas = ExtResource("8_c5nia")
region = Rect2(8, 135, 15, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_lplnv"]
atlas = ExtResource("8_c5nia")
region = Rect2(8, 111, 15, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_l1n5k"]
atlas = ExtResource("8_c5nia")
region = Rect2(8, 87, 15, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_m12hd"]
atlas = ExtResource("8_c5nia")
region = Rect2(8, 63, 15, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_wef0e"]
atlas = ExtResource("8_c5nia")
region = Rect2(8, 39, 15, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_snkdr"]
atlas = ExtResource("8_c5nia")
region = Rect2(8, 15, 15, 24)

[sub_resource type="SpriteFrames" id="SpriteFrames_peeuq"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_wpluh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8p4pa")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ji6i6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lplnv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_l1n5k")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_m12hd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wef0e")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_snkdr")
}],
"loop": true,
"name": &"move_fx",
"speed": 8.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_c23tx"]
atlas = ExtResource("3_leiqd")
region = Rect2(21, 0, 96, 26)

[sub_resource type="AtlasTexture" id="AtlasTexture_drou0"]
atlas = ExtResource("3_leiqd")
region = Rect2(21, 26, 96, 26)

[sub_resource type="AtlasTexture" id="AtlasTexture_g67tq"]
atlas = ExtResource("3_leiqd")
region = Rect2(21, 52, 96, 26)

[sub_resource type="AtlasTexture" id="AtlasTexture_gaabr"]
atlas = ExtResource("3_leiqd")
region = Rect2(21, 78, 96, 26)

[sub_resource type="AtlasTexture" id="AtlasTexture_pvvtu"]
atlas = ExtResource("3_leiqd")
region = Rect2(21, 104, 96, 26)

[sub_resource type="AtlasTexture" id="AtlasTexture_kt07c"]
atlas = ExtResource("3_leiqd")
region = Rect2(21, 130, 96, 26)

[sub_resource type="AtlasTexture" id="AtlasTexture_rr13u"]
atlas = ExtResource("3_leiqd")
region = Rect2(21, 156, 96, 26)

[sub_resource type="SpriteFrames" id="SpriteFrames_7xvvo"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_c23tx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_drou0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_g67tq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gaabr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pvvtu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kt07c")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rr13u")
}],
"loop": false,
"name": &"dash_vfx",
"speed": 6.0
}]

[node name="Character" type="CharacterBody2D"]
script = ExtResource("1_lwf4d")
dash_speed = 1000
dash_duration = 0.4

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CapsuleShape2D_0bn5y")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
texture_filter = 1
position = Vector2(1, -2)
scale = Vector2(8, 8)
sprite_frames = SubResource("SpriteFrames_mli6f")
animation = &"move"

[node name="CharacterVfx" type="Node2D" parent="."]
position = Vector2(-96, 63)
scale = Vector2(4, 4)

[node name="MoveVfx" type="AnimatedSprite2D" parent="CharacterVfx"]
texture_filter = 1
sprite_frames = SubResource("SpriteFrames_peeuq")
animation = &"move_fx"

[node name="DashVfx" type="AnimatedSprite2D" parent="CharacterVfx"]
texture_filter = 1
position = Vector2(7.25, -1)
sprite_frames = SubResource("SpriteFrames_7xvvo")
animation = &"dash_vfx"
